hydroflow/tests/compile-fail/surface_syntax_indexing_empty.stderr
error: expected identifier
 --> tests/compile-fail/surface_syntax_indexing_empty.rs:5:31
  |
5 |         source_iter(0..10) -> [0]();
  |                               ^
